# Theory_and_Methods_of_Optimization

./: .gitignore  README.md  derivatives.txt  main.py
Aplikacja/: Aplikacja.cbp  CMakeCache.txt  CMakeLists.txt  MainProcess.uml  Makefile  Theory_And_Methods_of_Optimization.cbp  cmake_install.cmake  scenario.uml  ui_functioninput.h  ui_graph.h  ui_mainwindow.h
Aplikacja/FunctionGetter/: CMakeLists.txt
Aplikacja/Polak_Ribiere/: Makefile  Polak_Ribiere  Polak_Ribiere.pro  graph.cpp  graph.cpp.autosave  graph.h  graph.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc_images.cpp  standardfunctionsdefinitions.h  ui_functioninput.h  ui_mainwindow.h
Aplikacja/Polak_Ribiere/forms/: functioninput.ui  graph.ui  graph.ui_parameters  mainwindow.ui
Aplikacja/Polak_Ribiere/include/: FunctionInput.h  FunctionsSaver.cpp  FunctionsSaver.hpp  Graph.h  MainWindow.h  SolverWrapper.cpp  SolverWrapper.h  SolverWrapper.hpp  functioninput.h  graph.h  mainwindow.h  standardfunctionsdefinitions.h
Aplikacja/Polak_Ribiere/sources/: FunctionInput.cpp  FunctionsSaver.cpp  Graph.cpp  MainWindow.cpp  SolverWrapper.cpp  functioninput.cpp  graph.cpp  mainwindow.cpp
Aplikacja/Solver/: CMakeLists.txt  Definitions.hpp  Functions.hpp  Logger.hpp  Methods.hpp  Solver.hpp  SymbolicOperations.hpp  main.cpp
Aplikacja/Solver/include/: ApplicationStorage.hpp  Definitions.hpp  ExampleClass.hpp  FunctionInPointParameters.hpp  IApplicationStorage.hpp  IMethod.hpp  ISolver.hpp  MethodsFactory.hpp  ObjectiveFunction.hpp  PolakRibiereMethod.hpp  SMatrix.hpp  SSolution.hpp  SVector.hpp  Solver.hpp
Aplikacja/Solver/include/Definitions_and_Helpers/: Definitions.hpp  Optional.hpp
Aplikacja/Solver/include/FunctionGetter/: ObjectiveFunctionGetter.hpp  ParserWrapper.hpp
Aplikacja/Solver/include/Functions/: FunctionWrapper.hpp  FunctionsFactory.hpp  GradientWrapper.hpp  HessianWrapper.hpp  IFunctionsFactory.hpp  ParserWrapper.hpp  SFunction.hpp  SGradient.hpp  SHessian.hpp  SObjectiveFunction.hpp
Aplikacja/Solver/include/Functions/Parser/: exprtk.hpp
Aplikacja/Solver/include/Interface/: IMethod.hpp  IObjectiveFunctionGetter .hpp  ISolver.hpp
Aplikacja/Solver/include/Logger/: Logger.hpp  LoggersFactory.hpp
Aplikacja/Solver/include/Methods/: IMethod.hpp  IMethodsFactory.hpp  IterationMethodsParameters.hpp  MethodsFactory.hpp  MinimalizeInDirectionHelper.hpp  PolakRibiereMethod.hpp
Aplikacja/Solver/include/SymbolicOperations/: ISymbolicOperator.hpp  PythonFileHelper.hpp  SymbolicOperator.hpp
Aplikacja/Solver/sources/: ApplicationStorage.cpp  ExampleClass.cpp  FunctionInPointParameters.cpp  MethodsFactory.cpp  ObjectiveFunction.cpp  PolakRibiereMethod.cpp  SMatrix.cpp  SSolution.cpp  SVector.cpp  Solver.cpp
Aplikacja/Solver/sources/Definitions_and_Helpers/: Definitions.cpp
Aplikacja/Solver/sources/FunctionGetter/: ObjectiveFunctionGetter.cpp  ParserWrapper.cpp
Aplikacja/Solver/sources/Functions/: FunctionWrapper.cpp  FunctionsFactory.cpp  GradientWrapper.cpp  HessianWrapper.cpp  ParserWrapper.cpp  SFunction.cpp  SGradient.cpp  SHessian.cpp  SObjectiveFunction.cpp
Aplikacja/Solver/sources/Logger/: Logger.cpp  LoggersFactory.cpp
Aplikacja/Solver/sources/Methods/: IterationMethodsParameters.cpp  MethodsFactory.cpp  MinimalizeInDirectionHelper.cpp  PolakRibiereMethod.cpp
Aplikacja/Solver/sources/SymbolicOperations/: PythonFileHelper.cpp  SymbolicOperator.cpp
Aplikacja/Solver/tests/: ExampleClassTests.cpp  FunctionWrapperTests.cpp  FunctionsFactoryTests.cpp  GradientWrapperTests.cpp  ObjectiveFunctionTests.cpp  ParserWrapperTests.cpp  SFunctionTests.cpp  SGradientTests.cpp  SHessianTests.cpp  SMatrixTests.cpp  SVectorTests.cpp  SolverTests.cpp  SymbolicOperatorTests.cpp  VectorTests.cpp
Aplikacja/Solver/tests/Example/: ExampleClass.cpp
Aplikacja/Solver/tests/mocks/: IApplicationStorageMock.hpp  IFunctionGetterMock.hpp  IMethodMock.hpp  ISymbolicOperatorMock.hpp
Aplikacja/build-Polak_Ribiere-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Makefile  Polak_Ribiere  moc_mainwindow.cpp
Aplikacja/cmake_modules/: FindQwt.cmake  Qt5DataVisualizationConfig.cmake
